# deesk

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: lint.yml
ekko/: __init__.py  file.py  protocols.py  storage.py
ekko/drivers/: base.py  fs.py  memory.py  s3.py
examples/: local_fs.py
tests/: conftest.py  test_storage.py
